# bfft

./: .gitignore  AGENTS.md  CMakeLists.txt  CODEX.md  IDEA.md  LICENSE  MANIFEST.in  Makefile  PROGRESS.md  PROJECTS_REMAINING.md  README.md  ROADMAP.md  TASKS.md  TODO_HUMAN.md  Thesis.md  bruun_fastplan_v3 (1).cpp  bruun_nonpower2_simd.cpp  bruun_nonpower2_simd_notes.md  capstone.md  generalized_bruun_radix3.py  human.md  pyproject.toml  scratch_genbruun.cpp  scratch_genbruun_exact.py  scratch_genbruun_inverse.py  scratch_genbruun_normalized.py  scratch_genbruun_plan.cpp  scratch_genbruun_rec.py  scratch_qhso.py  scratch_qhso_layer3.py  scratch_qhso_sep.py.bak  setup.py  stft.py
.github/workflows/: ci.yml
benchmarks/: genbruun_nonpower2_simd_benchmark.cpp  odd_prime_power_fftw_benchmark.cpp  stft_validation.py
bfft/: __init__.py  _core.py  numba_support.py
build-dit-both/tests/: api_c  correctness
build-dit-fwd/tests/: api_c  correctness
cmake/: BFFTConfig.cmake.in
dfft/: .gitignore  CMakeLists.txt  DRAGON_BOUNDARIES.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py
dfft/benchmarks/: stft_validation.py
dfft/bfft/: _core.py
dfft/documentation/: .readthedocs.yaml  api-c.md  api-cpp.md  concepts.md  conf.py  index.md  installation.md
dfft/examples/: bodft_benchmark.cpp  c_api_demo.c  cpp_api_demo.cpp  fftw_polar_roundtrip_benchmark.cpp  locality_probe.cpp
dfft/experiments/: __init__.py  scratch_bruun.py  scratch_normbruun.py
dfft/src/: atan_vectoring_network_experiment.cpp  bfft.cpp
dfft/tests/: api_c.c  bfft_fftw_sfdr_bh7_probe.cpp
dfft/tools/: gen_phase_slope_tables.py
docs/: api.md  architecture.md  maintainer-notes.md  release-checklist.md
documentation/: README.md  api-bodft.md  api-c.md  api-cpp.md  concepts.md  conf.py  contributing.md  examples.md  index.md  python.md  quick-start.md  readthedocs-setup.md
documentation/reports/: odd_prime_accuracy.md
examples/: apple_benchmark.cpp  atan2_benchmark.cpp  audio_magphase_roundtrip_benchmark.cpp  benchmark.cpp  benchmark_compile_instructions.txt  dctiv_benchmark.cpp  dif_dit_dip_benchmark.cpp  dif_vs_dip_benchmark.cpp  dif_vs_dit_benchmark.cpp  dif_vs_dit_f32_benchmark.cpp  dip_benchmark.cpp  fct_half_edge_benchmark.cpp  fct_intrinsic_benchmark.cpp  fftw_polar_roundtrip_benchmark.cpp  radix4_rfft_benchmark.cpp
experiments/: DCT_HANDOFF.md  aperture_ladder.py  aperture_ladder_coverage.py  benchmark_radix2_vs_radix4.cpp  bruun512_positive_forward_inverse.py  bruun_dct.hpp  bruun_radix4_kernel.hpp  cheb_dct_assemble.hpp  cheb_dct_bench.cpp  cheb_dct_radix_probe.cpp  cheb_deferred_probe.cpp  cheb_multiply_probe.cpp  cheb_stability_probe.cpp  chebyshev_composed_radix4_kernel.hpp  chebyshev_dct_kernel.hpp  chebyshev_dct_radix4.hpp  cone_dip_delayline.py  cone_fft_gauged.py  dct1_dst1_via_fft.hpp  dip_numba.py  dip_phase_packet.py  dip_seed_discovery.py  dip_transport_proto.py  dip_transport_symmetry.py  dip_twisted_walk.py  dip_vertical_identification.py  dip_zak_fusion.py  directional_fusion.py  explanation.md  fractional_channel_sharing.py  gauge_dof_analysis.py  grid_disk_pyramid.py  hourglass_middle_probe.py  intrinsic_dip_boundary.py  intrinsic_dip_branchbound.py  intrinsic_dip_frontier.py  ipd_vs_fct_adversarial.py  ladder_theorem.py  lazy_phase_type.py  meyer_accel.py  (+34 more)
include/bfft/: bdct.h  bdct.hpp  bfft.h  bfft.hpp  bodft.h  fct.h  fct.hpp  meyer.h  stft.h  stft.hpp
notes/: aperture_ladder_design.md  dip_phase_packet_design.md  dip_twisted_walk.md  dip_vertical_identification.md  dip_zak_fusion.md  dit_capability_checklist.md  experimental_radix4_dit_avx2_handoff.md  experimental_radix4_dit_inverse_notes.md  gauge_dof_bounds.md  genbruun_port_handoff.md  intrinsic_phase_disk_dip.md  intrinsic_support_transform.md  meyer_accel_theory.md  meyer_bregman_ladder.md  phase_packet_fft.md  physical_fft_whitepaper.md  physical_fourier_machine.md  prompt.md  raw_iq_reassignment_implementation.md  reassigned_stft_viewer_specification.md  tgfd_meyer_response.tex  tgfd_visual_supplement.tex  thle_transform.md  two_lattice_formal.tex  two_lattice_superresolution.md  two_raw_reassignment_modes.md  waterfall_math_audit.md
pkgconfig/: bfft.pc.in
scripts/: agent-loop.sh  ctypes_binding_benchmark.py  odd_prime_accuracy_probe.py
src/: ASSEMBLY_NOTES.txt  atan_vectoring_network_experiment.cpp  bdct.cpp  bfft.cpp  bodft.cpp  fct.cpp  meyer.cpp  stft.cpp
src/detail/: ChatGPT-DIP Core Rewrite.txt  MAG_REPRESENT_KERNEL.hpp  bdct_kernel.hpp  bodft_avx2_notes.md  bodft_kernel.hpp  bruun_DIT_kernel.hpp  bruun_dif_dit_kernel_audit.md  bruun_dif_kernel.hpp  bruun_dip_kernel.hpp  bruun_dit_kernel.hpp  bruun_kernel.hpp  bruun_simd_backend.hpp  experimental_radix4_dit_avx2_handoff.md  experimental_radix4_dit_inverse_notes.md  experimental_radix4_rfft_kernel.hpp  fct_fractional_provider.hpp  fct_half_edge_simd.hpp  fct_intrinsic_kernel.hpp  fct_kernel.hpp  genbruun_acceleration_plan.md  genbruun_kernel.hpp  genbruun_nonpower2_simd.hpp  genbruun_nonpower2_simd_notes.md  inverse_acceleration_notes.txt  kernel_sequentiality_flow.md  kernel_thoughts_2340ed8_jul_5_26.md  meyer_kernel.hpp  radix4_rfft_kernel.hpp  real_bruun_dit_radix4.py
tests/: api_c.c  audio_magphase_roundtrip_benchmark.cpp  bfft_fftw_sfdr_bh7_probe.cpp  bfft_fftw_sfdr_probe.cpp  bfft_fftw_support_probe.cpp  bfft_invariant_support_probe.cpp  bfft_library_compare_probe.cpp  correctness.cpp  fct_fractional_provider.cpp  fct_half_edge_simd.cpp  fct_intrinsic_kernel.cpp  fct_test.py  genbruun_correctness.cpp  ipd_test.py  meyer_test.py  statistics  test_dit.cpp  test_radix_parity.cpp
tools/: gen_phase_slope_tables.py
viewer/: NOTES_FOR_SOL.md  README.md  build.sh  dip_algo.cpp  dip_stream.py  iq_waterfall_app.py  iqwaterfall.cpp  iqwaterfall.py  last_moments_work.md  make_sr_fixture.py  meyer_video.py  run.sh  sr_fusion_study.py  superres.py  test_fusion_support.py  test_two_lattice.py  two_lattice.py  validate_modes.py  website.crt  website.key
viewer/archive/: fct_view.py  validate_dip.py
zeta/: README.md
zeta/src/: cusp_galerkin.py  (+10 more)
(+26 files in other folders)
