[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bfft"
version = "0.1.0"
description = "Python bindings for the BFFT real Fourier transform library (drop-in numpy.fft.rfft + half-bin ODFT)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
dependencies = ["numpy>=1.20"]

[project.urls]
Homepage = "https://github.com/falseywinchnet/bfft"

# The native shared library is compiled from src/ at install time by setup.py and
# bundled inside the package. No prebuilt binaries are distributed.
[tool.setuptools]
packages = ["bfft"]

[tool.setuptools.package-data]
bfft = ["_libbfft.*"]
